# DRV8825_PIC

./: .codelineignore  .gitignore  CMakeLists.txt  README.md  accel_profile.py
cmake/: toolchain-pic18f16q20.cmake
core/: device.c  device.h  dma_descriptor.h  gpio.h  hwlock.h  interrupts.h  irq_device.h  irq_manager.h  pinmux.h  serial_logger.h  system.h  task_manager.h  toolchain-xc8.cmake  types.h
core/hw/: registers.h
core/hw/inc/: clcx_hw.h  dma_hw.h  i2c_hw.h  pwm_hw.h  timer0_hw.h  timer1_hw.h  timer2x_hw.h  uart_hw.h  uart_hw.h.txt  utmr_hw.h
core/hw/src/: clcx_hw.c  dma_hw.c  i2c_hw.c  pwm_hw.c  timer0_hw.c  timer1_hw.c  timer2x_hw.c  uart_hw.c  uart_hw.c.txt  utmr.c
core/inc/: timer.h  types.h
core/src/: _vsnprintf_mcu_compat.c  config_bits.c  dma_descriptor.c  gpio_pic18f.c  hwlock.c  interrupts.c  pic18f_irq_manager.c  pinmux_pic18f.c  serial_logger.c  system.c  task_manager.c  tastk_manager.c
core/src/timers/: pic18f16q.c
inc/: MCP23008.h  ccp.h  cordic.h  drv8825_task.h  fixed_point.h  gcode_parse.h  gpio.h  main.h  math.h  registers.h  ringbuffer.h  stepper.h  stepper_device.h  stepper_task.h  stepper_test.h.excluded  timer.h  utmr.h  vector.h  vector.h.txt
src/: MCP23008.c  _math.s  ccp.c  cordic.c  drv8825.c  drv8825.c.excluded  drv8825_task.c  fixed_point.c  gcode_parse.c  gpio.c  main.c  math.c  math.s  ringbuffer.c  stepper_architecture.c  timer.c  utmr.c  vector.c  vector.c.txt
stepper/: axis_stepper.c  axis_stepper.h  config.h  drv8825.c  motion_contrl.c  motion_control.h  motion_control_task.c  motion_planer.c  motion_planer.h  motion_planer_task.c  stepper.h  stepper_architecture.c  stepper_device.h  stepper_task.c  task.h
